codex-rs/core/tests/suite/snapshots/all__suite__model_visible_layout__model_visible_layout_cwd_change_does_not_refresh_agents.snap
---
source: core/tests/suite/model_visible_layout.rs
expression: "format_labeled_requests_snapshot(\"Second turn changes cwd to a directory with different AGENTS.md; current behavior does not emit refreshed AGENTS instructions.\",\n&[(\"First Request (agents_one)\", &requests[0]),\n(\"Second Request (agents_two cwd)\", &requests[1]),])"
---
Scenario: Second turn changes cwd to a directory with different AGENTS.md; current behavior does not emit refreshed AGENTS instructions.

## First Request (agents_one)
00:message/developer[6]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <conventional_commits>\n## Conventional Commits\nWhen creating or reviewing git commit messages,...
    [03] <git_intent_notes>\n## Git Intent Notes\nFor code changes, preserve the why in git notes under `...
    [04] <scratchpad_instructions>\n## Built-in Scratchpad\nThe built-in `scratchpad` tool namespace is a...
    [05] <fork_help>\n## Rick Fork Guidance\nThis build includes fork-only behavior beyond upstream/mainl...
    [06] <SKILLS_INSTRUCTIONS>
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:first turn in agents_one

## Second Request (agents_two cwd)
00:message/developer[6]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <conventional_commits>\n## Conventional Commits\nWhen creating or reviewing git commit messages,...
    [03] <git_intent_notes>\n## Git Intent Notes\nFor code changes, preserve the why in git notes under `...
    [04] <scratchpad_instructions>\n## Built-in Scratchpad\nThe built-in `scratchpad` tool namespace is a...
    [05] <fork_help>\n## Rick Fork Guidance\nThis build includes fork-only behavior beyond upstream/mainl...
    [06] <SKILLS_INSTRUCTIONS>
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:first turn in agents_one
03:message/assistant:turn one complete
04:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
05:message/user:second turn in agents_two
